tiny fix for 2 chapter name

--- a/slides/index.html
+++ b/slides/index.html
@@ -51,7 +51,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-background-transition="fade" ></section>
 
 <!-- ====================================================================== -->
-<section data-markdown="contents/02-make-api-funny.md"
+<section data-markdown="contents/02-lovely-api.md"
          data-separator="^----"
          data-vertical="^---"
          data-transition="linear"
