comment api part

--- a/slides/index.html
+++ b/slides/index.html
@@ -51,12 +51,12 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-background-transition="fade" ></section>
 
 <!-- ====================================================================== -->
-<section data-markdown="contents/02-lovely-api.md"
-         data-separator="^----"
-         data-vertical="^---"
-         data-transition="linear"
-         data-background="img/matrix-ppoi.png"
-         data-background-transition="fade" ></section>
+<!--<section data-markdown="contents/02-lovely-api.md"-->
+         <!--data-separator="^----"-->
+         <!--data-vertical="^---"-->
+         <!--data-transition="linear"-->
+         <!--data-background="img/matrix-ppoi.png"-->
+         <!--data-background-transition="fade" ></section>-->
 
 <!-- ====================================================================== -->
 
