add chapter 2 - lovely api

--- a/slides/index.html
+++ b/slides/index.html
@@ -15,7 +15,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <link rel="stylesheet" href="css/reveal.css">
-<link rel="stylesheet" href="css/theme/night.css" id="theme">
+<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
 <!-- For syntax highlighting -->
 <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -51,12 +51,11 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-background-transition="fade" ></section>
 
 <!-- ====================================================================== -->
-<!--<section data-markdown="contents/02-lovely-api.md"-->
-         <!--data-separator="^----"-->
-         <!--data-vertical="^---"-->
-         <!--data-transition="linear"-->
-         <!--data-background="img/matrix-ppoi.png"-->
-         <!--data-background-transition="fade" ></section>-->
+<section data-markdown="contents/02-lovely-api.md"
+         data-separator="^----"
+         data-vertical="^---"
+         data-transition="linear"
+         data-background-transition="fade" ></section>
 
 <!-- ====================================================================== -->
 
