--- a/slides/index.html
+++ b/slides/index.html
@@ -59,7 +59,11 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
 <!-- ====================================================================== -->
 
-    <!--append new slides here-->
+<section data-markdown="contents/03-ruby-block.md"
+         data-separator="^----"
+         data-vertical="^---"
+         data-transition="linear"
+         data-background-transition="fade" ></section>
 
 <!-- ====================================================================== -->
 </div>
