--- a/slides/index.html
+++ b/slides/index.html
@@ -43,29 +43,26 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
 
-<!-- ====================================================================== -->
-<section data-markdown="contents/01-Ruby-and-its-fellows.md"
+<section data-markdown="contents/0-foreword.md"
          data-separator="^----"
-         data-vertical="^---"
-         data-transition="linear"
-         data-background-transition="fade" ></section>
+         data-vertical="^---"></section>
 
-<!-- ====================================================================== -->
-<section data-markdown="contents/02-lovely-api.md"
+<section data-markdown="contents/1-ruby-and-its-fellows.md"
          data-separator="^----"
-         data-vertical="^---"
-         data-transition="linear"
-         data-background-transition="fade" ></section>
+         data-vertical="^---"></section>
 
-<!-- ====================================================================== -->
-
-<section data-markdown="contents/03-ruby-block.md"
+<section data-markdown="contents/2-lovely-api.md"
          data-separator="^----"
-         data-vertical="^---"
-         data-transition="linear"
-         data-background-transition="fade" ></section>
+         data-vertical="^---"></section>
 
-<!-- ====================================================================== -->
+<section data-markdown="contents/3-ruby-block.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
+
+<section data-markdown="contents/4-ruby-oo.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
+
 </div>
 </div>
 
