add chapter 5 to index

--- a/slides/index.html
+++ b/slides/index.html
@@ -63,6 +63,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-separator="^----"
          data-vertical="^---"></section>
 
+<section data-markdown="contents/5-ruby-meta-programming.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
+
 </div>
 </div>
 
