--- a/slides/index.html
+++ b/slides/index.html
@@ -67,6 +67,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-separator="^----"
          data-vertical="^---"></section>
 
+<section data-markdown="contents/6-rack-and-sinatra.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
