--- a/slides/index.html
+++ b/slides/index.html
@@ -70,6 +70,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/6-rack-and-sinatra.md"
          data-separator="^----"
          data-vertical="^---"></section>
+
+<section data-markdown="contents/7-rest-and-restful-web-api.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
