[mc] add rspec3 slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -74,6 +74,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/7-rest-and-restful-web-api.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/rspec3.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
