--- a/slides/index.html
+++ b/slides/index.html
@@ -77,6 +77,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/rspec3.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/ansible.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
