--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/ansible.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/cd.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
