[mc] add ansible

--- a/slides/index.html
+++ b/slides/index.html
@@ -79,6 +79,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
          data-separator="^----"
          data-vertical="^---"
          ></section>
+<section data-markdown="contents/ansible.md"
+data-separator="^----"
+data-vertical="^---"
+></section>
 <section data-markdown="contents/cd.md"
          data-separator="^----"
          data-vertical="^---"
