--- a/slides/index.html
+++ b/slides/index.html
@@ -83,6 +83,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/cd.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/web-server.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
