[mc] add background job slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -92,6 +92,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/email.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/background-job.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
