--- a/slides/index.html
+++ b/slides/index.html
@@ -95,6 +95,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/background-job.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/data-migration.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
