[mc] add performance slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -98,6 +98,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 <section data-markdown="contents/data-migration.md"
          data-separator="^----"
          data-vertical="^---"></section>
+<section data-markdown="contents/performance.md"
+         data-separator="^----"
+         data-vertical="^---"></section>
 </div>
 </div>
 
